@@ -22,6 +22,7 @@ Other features
  * Update documentation (configuring Django for Wagtail) to contain all current settings options (Matt Westcott, LB (Ben Johnston))
  * Added ``defer`` flag to ``PageQuerySet.specific`` (Karl Hobley)
  * Snippets can now be deleted from the listing view (LB (Ben Johnston))
+ * Increased max length of redirect URL field to 255 (Michael Harrison)
 
 Bug fixes
 ~~~~~~~~~
